trunk/Archive2/ad/1f2765c5995474/output
main.cpp:8:9: warning: empty parentheses interpreted as a function declaration [-Wvexing-parse]
    A a1();
        ^~
main.cpp:8:9: note: remove parentheses to declare a variable
    A a1();
        ^~
main.cpp:10:8: error: non-object type 'A ()' is not assignable
    a1 = a2;
    ~~ ^
1 warning and 1 error generated.
